# python-project-49

./: .gitignore  Makefile  README.md  calc.cast  demo.cast  gcd.cast  prime.cast  progression.cast  pyproject.toml
brain_games/: cli.py  game_even.py  manager.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
