[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "It's brain games. Five games to test your brain!"
authors = ["Alisa Kuzyagina <khairutdinovaaalisa@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Intended Audience :: Everybody",
    "Operating System :: Ubuntu",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.urls]
Repository = "https://github.com/alisa-kz/python-project-49"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
